--- a/index.html
+++ b/index.html
@@ -1,166 +1,154 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trade Journal App</title>
-    <script defer src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script defer src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script defer type="text/babel">
-      const { useState } = React;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Trade Journal</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f2f2f2;
+      padding: 20px;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+    }
+    form {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    input, select, textarea, button {
+      width: 100%;
+      margin: 8px 0;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background: #4caf50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
+    }
+    .trade-list {
+      max-width: 800px;
+      margin: 30px auto;
+    }
+    .trade-card {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      position: relative;
+    }
+    .delete-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: crimson;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .delete-btn:hover {
+      background: darkred;
+    }
+  </style>
+</head>
+<body>
+  <h1>Trade Journal</h1>
+  <form id="tradeForm">
+    <input type="datetime-local" id="datetime" required />
+    <input type="text" id="instrument" placeholder="Instrument/Asset (e.g. EUR/USD, BTC/USDT)" required />
+    <select id="setup">
+      <option value="Technical">Technical</option>
+      <option value="Fundamental">Fundamental</option>
+    </select>
+    <input type="text" id="entryExit" placeholder="Entry/Exit Points (e.g. 1.0920/1.0960)" required />
+    <input type="text" id="size" placeholder="Position Size (e.g. 1 Lot)" required />
+    <input type="text" id="stopTarget" placeholder="Stop Loss & Target (e.g. 1.0900 / 1.1000)" required />
+    <select id="reason" required>
+      <option value="" disabled selected>Reason for Trade</option>
+      <option>Breakout</option>
+      <option>Support/Resistance</option>
+      <option>News/Event</option>
+      <option>Trend Following</option>
+      <option>Reversal</option>
+      <option>Scalping Setup</option>
+      <option>Other</option>
+    </select>
+    <textarea id="emotion" placeholder="Emotion Before/During/After" rows="2"></textarea>
+    <textarea id="analysis" placeholder="Post-Trade Analysis (What went right/wrong)" rows="2"></textarea>
+    <button type="submit">Save Trade</button>
+  </form>
 
-      const symbols = [
-        "EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "USD/CAD", "NZD/USD",
-        "EUR/JPY", "GBP/JPY", "CHF/JPY", "EUR/GBP", "AUD/JPY",
-        "BTC/USD", "ETH/USD", "BNB/USD", "XRP/USD", "ADA/USD", "SOL/USD", "DOGE/USD",
-        "DOT/USD", "AVAX/USD", "TRX/USD"
-      ];
+  <div class="trade-list" id="tradeList"></div>
 
-      const reasons = [
-        "Breakout", "Support/Resistance", "Trend Reversal", "Pullback", "News Event",
-        "Earnings Report", "Technical Indicator Signal", "Pattern Recognition",
-        "Price Action", "Fundamental Analysis", "Correlation Setup"
-      ];
+  <script>
+    const form = document.getElementById('tradeForm');
+    const tradeList = document.getElementById('tradeList');
 
-      function TradeJournalApp() {
-        const [trades, setTrades] = useState([]);
-        const [form, setForm] = useState({
-          date: "",
-          symbol: "",
-          setup: "",
-          entry: "",
-          exit: "",
-          size: "",
-          stopLoss: "",
-          target: "",
-          reason: "",
-          emotions: "",
-          analysis: "",
-          tags: ""
-        });
+    let trades = JSON.parse(localStorage.getItem('trades')) || [];
 
-        const handleChange = (e) => {
-          setForm({ ...form, [e.target.name]: e.target.value });
-        };
+    function displayTrades() {
+      tradeList.innerHTML = '';
+      trades.forEach((trade, index) => {
+        const card = document.createElement('div');
+        card.className = 'trade-card';
+        card.innerHTML = `
+          <strong>${trade.datetime}</strong><br>
+          <b>Instrument:</b> ${trade.instrument}<br>
+          <b>Setup:</b> ${trade.setup}<br>
+          <b>Entry/Exit:</b> ${trade.entryExit}<br>
+          <b>Size:</b> ${trade.size}<br>
+          <b>Stop/Target:</b> ${trade.stopTarget}<br>
+          <b>Reason:</b> ${trade.reason}<br>
+          <b>Emotion:</b> ${trade.emotion}<br>
+          <b>Analysis:</b> ${trade.analysis}
+          <button class="delete-btn" onclick="deleteTrade(${index})">Delete</button>
+        `;
+        tradeList.appendChild(card);
+      });
+    }
 
-        const handleSubmit = (e) => {
-          e.preventDefault();
-          const newTrade = { ...form, tags: form.tags.split(",").map(tag => tag.trim()) };
-          setTrades([...trades, newTrade]);
-          setForm({
-            date: "",
-            symbol: "",
-            setup: "",
-            entry: "",
-            exit: "",
-            size: "",
-            stopLoss: "",
-            target: "",
-            reason: "",
-            emotions: "",
-            analysis: "",
-            tags: ""
-          });
-        };
+    function deleteTrade(index) {
+      trades.splice(index, 1);
+      localStorage.setItem('trades', JSON.stringify(trades));
+      displayTrades();
+    }
 
-        return (
-          <div className="container">
-            <h1>📓 Advanced Trade Journal</h1>
-            <form onSubmit={handleSubmit}>
-              <input type="datetime-local" name="date" value={form.date} onChange={handleChange} />
-              <select name="symbol" value={form.symbol} onChange={handleChange}>
-                <option value="">Select Symbol</option>
-                {symbols.map((s, i) => <option key={i} value={s}>{s}</option>)}
-              </select>
-              <input name="setup" placeholder="Setup Type" value={form.setup} onChange={handleChange} />
-              <input name="entry" placeholder="Entry Point" value={form.entry} onChange={handleChange} />
-              <input name="exit" placeholder="Exit Point" value={form.exit} onChange={handleChange} />
-              <input name="size" placeholder="Position Size" value={form.size} onChange={handleChange} />
-              <input name="stopLoss" placeholder="Stop Loss" value={form.stopLoss} onChange={handleChange} />
-              <input name="target" placeholder="Target" value={form.target} onChange={handleChange} />
-              <select name="reason" value={form.reason} onChange={handleChange}>
-                <option value="">Select Reason</option>
-                {reasons.map((r, i) => <option key={i} value={r}>{r}</option>)}
-              </select>
-              <input name="tags" placeholder="Tags (comma separated)" value={form.tags} onChange={handleChange} />
-              <textarea name="emotions" placeholder="Emotions" value={form.emotions} onChange={handleChange}></textarea>
-              <textarea name="analysis" placeholder="Post-Trade Analysis" value={form.analysis} onChange={handleChange}></textarea>
-              <button type="submit">Save Trade</button>
-            </form>
-            <div>
-              <h2>📘 Logged Trades</h2>
-              {trades.length === 0 ? <p>No trades logged.</p> : trades.map((trade, i) => (
-                <div key={i} className="card">
-                  <p><strong>Date:</strong> {trade.date}</p>
-                  <p><strong>Symbol:</strong> {trade.symbol}</p>
-                  <p><strong>Setup:</strong> {trade.setup}</p>
-                  <p><strong>Entry/Exit:</strong> {trade.entry} / {trade.exit}</p>
-                  <p><strong>Size:</strong> {trade.size}</p>
-                  <p><strong>Stop/Target:</strong> {trade.stopLoss} / {trade.target}</p>
-                  <p><strong>Reason:</strong> {trade.reason}</p>
-                  <p><strong>Tags:</strong> {trade.tags.join(", ")}</p>
-                  <p><strong>Emotions:</strong> {trade.emotions}</p>
-                  <p><strong>Analysis:</strong> {trade.analysis}</p>
-                </div>
-              ))}
-            </div>
-          </div>
-        );
-      }
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+      const newTrade = {
+        datetime: document.getElementById('datetime').value,
+        instrument: document.getElementById('instrument').value,
+        setup: document.getElementById('setup').value,
+        entryExit: document.getElementById('entryExit').value,
+        size: document.getElementById('size').value,
+        stopTarget: document.getElementById('stopTarget').value,
+        reason: document.getElementById('reason').value,
+        emotion: document.getElementById('emotion').value,
+        analysis: document.getElementById('analysis').value
+      };
+      trades.push(newTrade);
+      localStorage.setItem('trades', JSON.stringify(trades));
+      form.reset();
+      displayTrades();
+    });
 
-      const container = document.getElementById("root");
-      const root = ReactDOM.createRoot(container);
-      root.render(<TradeJournalApp />);
-    </script>
-    <style>
-      body {
-        font-family: sans-serif;
-        background: #f1f5f9;
-        margin: 0;
-        padding: 2rem;
-      }
-      h1 {
-        text-align: center;
-        color: #2563eb;
-      }
-      form {
-        display: grid;
-        gap: 1rem;
-        background: white;
-        padding: 1.5rem;
-        border-radius: 12px;
-        max-width: 800px;
-        margin: auto;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      }
-      input, select, textarea, button {
-        padding: 0.5rem;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        font-size: 1rem;
-      }
-      button {
-        background: #2563eb;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #1e40af;
-      }
-      .card {
-        background: white;
-        padding: 1rem;
-        margin: 1rem auto;
-        border-left: 5px solid #2563eb;
-        max-width: 800px;
-        border-radius: 6px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    displayTrades();
+  </script>
+</body>
 </html>
