--- a/index.html
+++ b/index.html
@@ -3,150 +3,190 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trade Journal</title>
+  <title>Trade Journal Book</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
+      transition: all 0.2s ease-in-out;
     }
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #f8f9fa, #e9ecef);
-      padding: 20px;
+      background: #f8f9fa;
       margin: 0;
-      color: #212529;
+      padding: 40px 0;
+      color: #333;
     }
     h1 {
       text-align: center;
-      font-size: 2.5rem;
-      margin-bottom: 30px;
-      color: #343a40;
+      font-size: 3rem;
+      margin-bottom: 50px;
+      color: #6c4f38;
+      font-weight: 700;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
-    form {
-      max-width: 900px;
+    .journal-book {
+      max-width: 1200px;
       margin: auto;
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+      background: #fff;
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+      border: 1px solid #e0dcd1;
+      box-sizing: border-box;
+    }
+    label {
+      display: block;
+      font-weight: 600;
+      margin-top: 18px;
+      color: #555;
+      font-size: 1.1rem;
     }
     input, select, textarea, button {
       width: 100%;
-      margin: 10px 0;
+      margin-top: 10px;
       padding: 12px;
       border-radius: 8px;
-      border: 1px solid #ced4da;
+      border: 1px solid #ccc;
       font-size: 1rem;
-    }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #007bff;
-      box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.1);
+      background: #f7f7f7;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05);
     }
     button {
-      background: #007bff;
+      background: #4d9078;
       color: white;
       font-weight: 600;
       transition: background 0.3s ease;
       border: none;
+      margin-top: 25px;
+      cursor: pointer;
     }
     button:hover {
-      background: #0056b3;
+      background: #387d64;
     }
     .trade-list {
-      max-width: 900px;
-      margin: 40px auto;
+      margin-top: 50px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 20px;
     }
     .trade-card {
-      background: white;
+      background: #fff;
       padding: 20px;
       border-radius: 12px;
-      margin-bottom: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+      border-left: 5px solid #4d9078;
       position: relative;
-      transition: transform 0.2s;
+      transition: transform 0.2s ease;
     }
     .trade-card:hover {
-      transform: translateY(-3px);
+      transform: translateY(-5px);
     }
-    .delete-btn {
+    .trade-card h3 {
+      color: #4d9078;
+      font-size: 1.25rem;
+      margin-bottom: 12px;
+    }
+    .trade-card p {
+      font-size: 1rem;
+      margin-bottom: 8px;
+      color: #555;
+    }
+    .trade-card button {
       position: absolute;
-      top: 15px;
-      right: 15px;
-      background: #dc3545;
+      top: 12px;
+      right: 12px;
+      background: #d63031;
       color: white;
       border: none;
-      padding: 6px 12px;
+      padding: 8px 14px;
       border-radius: 6px;
       cursor: pointer;
       font-weight: bold;
+      font-size: 0.9rem;
+      transition: background 0.2s ease;
     }
-    .delete-btn:hover {
-      background: #b02a37;
+    .trade-card button:hover {
+      background: #c0392b;
     }
-    label {
+    .trade-card small {
+      display: block;
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #aaa;
+    }
+    .csv-btn {
+      background: #28a745;
+      padding: 12px 25px;
+      color: white;
       font-weight: 600;
+      margin-top: 30px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      display: block;
+      margin-left: auto;
+    }
+    .csv-btn:hover {
+      background: #218838;
     }
   </style>
 </head>
 <body>
-  <h1>📈 Trade Journal</h1>
-  <form id="tradeForm">
-    <label>Date & Time</label>
-    <input type="datetime-local" id="datetime" required />
+  <h1>📒 Trade Journal Book</h1>
+  <div class="journal-book">
+    <form id="tradeForm">
+      <label>Date & Time</label>
+      <input type="datetime-local" id="datetime" required />
+      <label>Asset Type</label>
+      <select id="assetType" required>
+        <option value="" disabled selected>Select Asset Type</option>
+        <option value="forex">Forex</option>
+        <option value="crypto">Crypto</option>
+        <option value="stock">Stock</option>
+        <option value="commodity">Commodity</option>
+      </select>
+      <label>Instrument</label>
+      <select id="instrument" required>
+        <option value="" disabled selected>Select Instrument</option>
+      </select>
+      <label>Setup Type</label>
+      <select id="setup">
+        <option value="Technical">Technical</option>
+        <option value="Fundamental">Fundamental</option>
+      </select>
+      <label>Entry/Exit Points</label>
+      <input type="text" id="entryExit" required />
+      <label>Position Size</label>
+      <input type="text" id="size" required />
+      <label>Stop Loss & Target</label>
+      <input type="text" id="stopTarget" required />
+      <label>Reason for Trade</label>
+      <select id="reason" required>
+        <option value="" disabled selected>Reason for Trade</option>
+        <option>Breakout</option>
+        <option>Support/Resistance</option>
+        <option>News/Event</option>
+        <option>Trend Following</option>
+        <option>Reversal</option>
+        <option>Scalping Setup</option>
+        <option>Technical Pattern</option>
+        <option>Volume Spike</option>
+        <option>Other</option>
+      </select>
+      <label>Emotion Before/During/After</label>
+      <textarea id="emotion" rows="2"></textarea>
+      <label>Post-Trade Analysis</label>
+      <textarea id="analysis" rows="2"></textarea>
+      <button type="submit">➕ Save Trade</button>
+    </form>
 
-    <label>Asset Type</label>
-    <select id="assetType" required>
-      <option value="" disabled selected>Select Asset Type</option>
-      <option value="forex">Forex</option>
-      <option value="crypto">Crypto</option>
-      <option value="stock">Stock</option>
-    </select>
+    <!-- Button to download CSV -->
+    <button class="csv-btn" onclick="downloadCSV()">💾 Download Journal as CSV</button>
 
-    <label>Instrument</label>
-    <select id="instrument" required>
-      <option value="" disabled selected>Select Instrument</option>
-    </select>
-
-    <label>Setup Type</label>
-    <select id="setup">
-      <option value="Technical">Technical</option>
-      <option value="Fundamental">Fundamental</option>
-    </select>
-
-    <label>Entry/Exit Points</label>
-    <input type="text" id="entryExit" required />
-
-    <label>Position Size</label>
-    <input type="text" id="size" required />
-
-    <label>Stop Loss & Target</label>
-    <input type="text" id="stopTarget" required />
-
-    <label>Reason for Trade</label>
-    <select id="reason" required>
-      <option value="" disabled selected>Reason for Trade</option>
-      <option>Breakout</option>
-      <option>Support/Resistance</option>
-      <option>News/Event</option>
-      <option>Trend Following</option>
-      <option>Reversal</option>
-      <option>Scalping Setup</option>
-      <option>Technical Pattern</option>
-      <option>Volume Spike</option>
-      <option>Other</option>
-    </select>
-
-    <label>Emotion Before/During/After</label>
-    <textarea id="emotion" rows="2"></textarea>
-
-    <label>Post-Trade Analysis</label>
-    <textarea id="analysis" rows="2"></textarea>
-
-    <button type="submit">➕ Save Trade</button>
-  </form>
-
-  <div class="trade-list" id="tradeList"></div>
+    <div class="trade-list" id="tradeList"></div>
+  </div>
 
   <script>
     const form = document.getElementById('tradeForm');
@@ -157,6 +197,7 @@
     const forexPairs = ["EUR/USD", "GBP/USD", "USD/JPY", "USD/CHF", "AUD/USD", "NZD/USD", "USD/CAD", "EUR/JPY", "GBP/JPY"];
     const cryptoPairs = ["BTC/USDT", "ETH/USDT", "BNB/USDT", "XRP/USDT", "ADA/USDT", "DOGE/USDT", "SOL/USDT", "DOT/USDT"];
     const stockSymbols = ["AAPL", "MSFT", "GOOGL", "AMZN", "TSLA", "META", "NFLX", "NVDA", "AMD", "BABA"];
+    const commodities = ["Gold", "Silver", "Crude Oil", "Natural Gas", "Copper", "Platinum", "Palladium", "Corn", "Wheat", "Soybeans"];
 
     function updateInstruments() {
       const type = assetType.value;
@@ -164,6 +205,7 @@
       if (type === 'forex') forexPairs.forEach(p => options.push(`<option value="${p}">${p}</option>`));
       if (type === 'crypto') cryptoPairs.forEach(p => options.push(`<option value="${p}">${p}</option>`));
       if (type === 'stock') stockSymbols.forEach(p => options.push(`<option value="${p}">${p}</option>`));
+      if (type === 'commodity') commodities.forEach(p => options.push(`<option value="${p}">${p}</option>`));
       instrument.innerHTML = options.join('');
     }
 
@@ -177,17 +219,17 @@
         const card = document.createElement('div');
         card.className = 'trade-card';
         card.innerHTML = `
-          <strong>${trade.datetime}</strong><br>
-          <b>Asset:</b> ${trade.assetType}<br>
-          <b>Instrument:</b> ${trade.instrument}<br>
-          <b>Setup:</b> ${trade.setup}<br>
-          <b>Entry/Exit:</b> ${trade.entryExit}<br>
-          <b>Size:</b> ${trade.size}<br>
-          <b>Stop/Target:</b> ${trade.stopTarget}<br>
-          <b>Reason:</b> ${trade.reason}<br>
-          <b>Emotion:</b> ${trade.emotion}<br>
-          <b>Analysis:</b> ${trade.analysis}
+          <h3>${trade.instrument} (${trade.assetType.toUpperCase()})</h3>
+          <p><strong>Date:</strong> ${trade.datetime}</p>
+          <p><strong>Setup:</strong> ${trade.setup}</p>
+          <p><strong>Entry/Exit:</strong> ${trade.entryExit}</p>
+          <p><strong>Size:</strong> ${trade.size}</p>
+          <p><strong>Stop/Target:</strong> ${trade.stopTarget}</p>
+          <p><strong>Reason:</strong> ${trade.reason}</p>
+          <p><strong>Emotion:</strong> ${trade.emotion}</p>
+          <p><strong>Analysis:</strong> ${trade.analysis}</p>
           <button class="delete-btn" onclick="deleteTrade(${index})">Delete</button>
+          <small>Saved on ${new Date(trade.datetime).toLocaleString()}</small>
         `;
         tradeList.appendChild(card);
       });
@@ -219,6 +261,35 @@
       instrument.innerHTML = '<option value="" disabled selected>Select Instrument</option>';
       displayTrades();
     });
+
+    function downloadCSV() {
+      const csvRows = [];
+      const headers = ['Date/Time', 'Asset Type', 'Instrument', 'Setup Type', 'Entry/Exit', 'Size', 'Stop/Target', 'Reason', 'Emotion', 'Post-Trade Analysis'];
+      csvRows.push(headers.join(','));
+
+      trades.forEach(trade => {
+        const row = [
+          trade.datetime,
+          trade.assetType,
+          trade.instrument,
+          trade.setup,
+          trade.entryExit,
+          trade.size,
+          trade.stopTarget,
+          trade.reason,
+          trade.emotion,
+          trade.analysis
+        ];
+        csvRows.push(row.join(','));
+      });
+
+      const csvString = csvRows.join('\n');
+      const blob = new Blob([csvString], { type: 'text/csv' });
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(blob);
+      link.download = 'trade_journal.csv';
+      link.click();
+    }
 
     displayTrades();
   </script>
