--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
     }
 
     h3 {
-      color: #333;
       text-align: center;
+      color: #333;
     }
 
     .simulation-toggle,
     .buttons-container {
       margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .simulation-toggle label {
+      font-size: 16px;
+      margin-right: 10px;
     }
 
     .simulation-indicator {
@@ -36,7 +43,7 @@
     }
 
     button {
-      padding: 10px 20px;
+      padding: 12px 25px;
       background-color: #4CAF50;
       color: white;
       border: none;
@@ -44,6 +51,7 @@
       cursor: pointer;
       font-size: 16px;
       margin: 5px;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
@@ -53,34 +61,37 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 20px;
+      margin-top: 20px;
+      margin-bottom: 30px;
     }
 
     th, td {
-      padding: 10px;
+      padding: 12px;
       text-align: left;
       border-bottom: 1px solid #ddd;
+      font-size: 14px;
     }
 
     /* Mobile responsiveness */
-    @media screen and (max-width: 768px) {
+    @media (max-width: 768px) {
       body {
         padding: 10px;
       }
 
-      table th, table td {
-        padding: 8px;
-        font-size: 14px;
+      table {
+        font-size: 12px;
+      }
+
+      th, td {
+        padding: 10px;
       }
 
       button {
         font-size: 14px;
-        padding: 8px 15px;
+        padding: 10px 20px;
       }
 
-      .simulation-toggle,
-      .buttons-container {
-        display: flex;
+      .simulation-toggle, .buttons-container {
         flex-direction: column;
         align-items: center;
       }
@@ -93,20 +104,16 @@
       h3 {
         font-size: 18px;
       }
-
-      /* Adjust table layout */
-      table {
-        width: 100%;
-        overflow-x: auto;
-        display: block;
-        white-space: nowrap;
-      }
     }
 
-    @media screen and (max-width: 480px) {
+    @media (max-width: 480px) {
+      button {
+        width: 100%;
+        margin: 10px 0;
+      }
+
       .buttons-container button {
         width: 100%;
-        margin: 5px 0;
       }
 
       .simulation-toggle {
@@ -218,5 +225,6 @@
       displaySimulatedTrades();
     }
   </script>
+
 </body>
 </html>
